--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "skipLibCheck": true,
     "strict": true,
     "baseUrl": "./",
+    "outDir": "./dist",
+    "declaration": true,
     "paths": {
       "*": ["node_modules/*"],
       "@/*": ["src/*"],
